# Encrypted_System

./: Cargo.toml  expenses.csv  nlp_client.rs  output.txt  results.csv  vault.db
nlp_env/: pyvenv.cfg
nlp_env/Scripts/: activate  activate.bat
nlp_service/: app.py  results.csv  vault.db
src/: crypto.rs  main.rs  models.rs  nlp_client.rs  notifier.rs  reminder_engine.rs  vault.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  main.rs  models.rs  nlp_client.rs  scheduler.rs  vault.rs
ui/: index.html  main.js  style.css
