[package]
name = "bill_extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
chrono = "0.4"
rusqlite = { version = "0.30", features = ["bundled"] }
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
rpassword = "7"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
argon2 = "0.5"
ctrlc = "3"
notify-rust = "4"