[package]
name = "bill-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite   = { version = "0.31", features = ["bundled"] }
aes-gcm    = "0.10"
argon2     = "0.5"
rand       = "0.8"
hex        = "0.4"
regex      = "1"
chrono     = { version = "0.4", features = ["serde"] }
ureq       = { version = "2", features = ["json"] }
notify-rust = "4"
tauri-plugin-log = "2"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
opt-level = "z"
lto = true
